@@ -1,0 +1,75 @@
+# -*- coding: utf-8 -*-
+# Generated by Django 1.9.9 on 2017-12-23 03:56
+from __future__ import unicode_literals
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('account_keeping', '0002_auto_20161006_1403'),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name='account',
+            name='initial_amount',
+            field=models.DecimalField(decimal_places=10, default=0, max_digits=18, verbose_name='Initial amount'),
+        ),
+        migrations.AlterField(
+            model_name='account',
+            name='total_amount',
+            field=models.DecimalField(decimal_places=10, default=0, max_digits=18, verbose_name='Total amount'),
+        ),
+        migrations.AlterField(
+            model_name='invoice',
+            name='amount_gross',
+            field=models.DecimalField(blank=True, decimal_places=10, default=0, max_digits=18, verbose_name='Amount gross'),
+        ),
+        migrations.AlterField(
+            model_name='invoice',
+            name='amount_net',
+            field=models.DecimalField(blank=True, decimal_places=10, default=0, max_digits=18, verbose_name='Amount net'),
+        ),
+        migrations.AlterField(
+            model_name='invoice',
+            name='value_gross',
+            field=models.DecimalField(decimal_places=10, default=0, max_digits=18, verbose_name='Value gross'),
+        ),
+        migrations.AlterField(
+            model_name='invoice',
+            name='value_net',
+            field=models.DecimalField(decimal_places=10, default=0, max_digits=18, verbose_name='Value net'),
+        ),
+        migrations.AlterField(
+            model_name='invoice',
+            name='vat',
+            field=models.DecimalField(decimal_places=10, default=0, max_digits=14, verbose_name='VAT'),
+        ),
+        migrations.AlterField(
+            model_name='transaction',
+            name='amount_gross',
+            field=models.DecimalField(blank=True, decimal_places=10, default=0, max_digits=18, verbose_name='Amount gross'),
+        ),
+        migrations.AlterField(
+            model_name='transaction',
+            name='amount_net',
+            field=models.DecimalField(blank=True, decimal_places=10, default=0, max_digits=18, verbose_name='Amount net'),
+        ),
+        migrations.AlterField(
+            model_name='transaction',
+            name='value_gross',
+            field=models.DecimalField(decimal_places=10, default=0, max_digits=18, verbose_name='Value gross'),
+        ),
+        migrations.AlterField(
+            model_name='transaction',
+            name='value_net',
+            field=models.DecimalField(decimal_places=10, default=0, max_digits=18, verbose_name='Value net'),
+        ),
+        migrations.AlterField(
+            model_name='transaction',
+            name='vat',
+            field=models.DecimalField(decimal_places=10, default=0, max_digits=14, verbose_name='VAT'),
+        ),
+    ]
