@@ -1,5 +1,6 @@
 === ongoing (0.3.X - to be released as 0.4) ===
 
+- Allow up to 10 decimal places
 - Substract partial payments from outstanding amounts
 
 === 0.3 ===
